--- a/wp-content/themes/unite-child/style.css
+++ b/wp-content/themes/unite-child/style.css
@@ -4,10 +4,10 @@ Theme URI: http://colorlib.com/wp/unite
 Author: Colorlib
 Author URI: http://colorlib.com/wp/
 Description: Unite is a clean, modern and fully responsive WordPress wedding theme built using Bootstrap 3 which makes it optimized for tablets and mobile. It is a highly customizable eCommerce theme with unlimited color variations that can be tweaked via simple yet powerful Theme Options. Theme has a built-in Popular Posts Widget, Infinite Scroll (powered by Jatpack) and translation support. It's now available in German and French. Theme features fancy image slider, SEO friendly structure, logo support, social links and widgetized homepage.  This theme was built to be used for wedding related websites but can be tweaked to be used as any other image-centric blog such as travel. Unite theme now supports WooCommerce to create your own eStore.
-Version: 2.0.2
+Version: 2.0.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: unite
+Text Domain: unite-child
 Domain Path: /languages/
 Tags: purple, light, white, gray, one-column, two-columns, right-sidebar, fluid-layout, responsive-layout, responsive-layout, translation-ready, custom-background, custom-colors, custom-menu, featured-images, full-width-template, post-formats, theme-options, threaded-comments
 
@@ -17,3 +17,11 @@ This theme, like WordPress, is licensed under the GPL.
 Unite is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 
 */
+
+
+/* =Global
+----------------------------------------------- */
+
+@import url(../unite/inc/css/bootstrap.min.css);
+@import url(../unite/inc/font-awesome.min.css);
+@import url(../unite/style.css);
